--- a/css/index.css
+++ b/css/index.css
@@ -18,15 +18,24 @@ body {
     overflow-x: hidden;
     font-family: 'Poppins', sans-serif;
     background: #fafafa;
-    animation-name: body-ann;
-    animation-duration: 1s;
-    animation-fill-mode: forwards;
+    -webkit-animation-name: body-ann;
+            animation-name: body-ann;
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+    -webkit-animation-fill-mode: forwards;
+            animation-fill-mode: forwards;
     scrollbar-width: none;
     max-height: 100%;
 }
 
 body::-webkit-scrollbar {
     display: none;
+}
+
+@-webkit-keyframes body-ann {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+    
 }
 
 @keyframes body-ann {
@@ -58,6 +67,7 @@ a:hover,
 a:focus {
     color: inherit;
     text-decoration: none;
+    -webkit-transition: all 0.3s;
     transition: all 0.3s;
 }
 
@@ -68,11 +78,14 @@ a:focus {
     font-size: 1.1em;
     font-weight: 300;
     line-height: 1.7em;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 100%;
 }
 
 #sidebar {
+    -webkit-transition: all 0.3s;
     transition: all 0.3s;
     height: 100%;
     overflow-y: auto;
@@ -109,6 +122,7 @@ a:focus {
     padding: 20px;
     right: 0;
     min-height: 100vh;
+    -webkit-transition: all 0.3s;
     transition: all 0.3s;
     z-index: 1;
 }
@@ -126,4 +140,12 @@ a:focus {
     .SH-SidebarPhone {
         display: none !important;
     }
+}.topheader{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background: #E3FFD2;
+    -webkit-transition: all 0.5s;
+    transition: all 0.5s;
 }
+	
